--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,24 @@
     padding: 0;
 }
 
-.landingContainer {
+body {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     
     text-align: center;
     padding: 2em;
-    min-height: 100vh;    
+    min-height: 100vh; 
+}
+                            /* Landing Section */
+.landingContainer {       
     background-image: linear-gradient(#9599E2 0%, #8BC6EC 100%);
-        /* https://cssgradient.io/gradient-backgrounds/ */
-    color: white;
-    font-family: 'Poppins', sans-serif;
+        /* https://cssgradient.io/gradient-backgrounds/ */     
 }
 .landingContainer img {
     width: 50%;
@@ -31,12 +37,12 @@
 }
 .landingContainer h2 {
     font-size: 2rem;
-    font-weight: 400;    
+    font-weight: 200;    
 }
 @media only screen and (min-width: 600px) {
     .landingContainer {
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-around;        
     }
     .landingTextContainer {
         order: 1;
@@ -47,7 +53,7 @@
         margin-bottom: initial;
     }
 }
-@media only screen and (min-width: 1140px) {
+@media only screen and (min-width: 1140px) {    
     .landingContainer h1 {
         font-size: 4rem;
     }    
@@ -55,3 +61,113 @@
         font-size: 3rem;
     }
 }
+
+                        /* 'My Work' Section */
+h3 {
+    font-size: 2.5rem;
+}
+                        
+.myWorkContainer {     
+    background-image: linear-gradient(#8BC6EC 0%, #fbbb67 100%);        
+    padding: 3em 2em; 
+}                                
+.myWorkImgsContainer {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5em;
+}
+.myWorkImgsContainer > div {
+    width: 100%;
+    margin-bottom: 5em;
+}
+.myWorkImgsContainer img {    
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.myWorkImgsContainer h4 {
+    margin-top: .5em;
+    font-size: 1.7rem;
+}
+.myWorkImgsContainer p {    
+    margin-top: 1.5em;    
+}
+.techUsed {
+    font-weight: 200;    
+}
+.linkButton {
+    display: inline-block;
+    margin-top: 2em;
+    padding: 1em 2.5em;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 0.2s; 
+    background-color: white;
+    color: #449fdb;
+    font-size: .8rem;
+    font-weight: 700; 
+    letter-spacing: 1px;
+    text-decoration: none;
+  }
+.linkButton:hover {
+    background-color: #449fdb;
+    color: white;
+}
+.buttonMargin {
+    margin-right: 1em;
+    margin-left: 1em;
+}
+.github div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    width: 100% !important;
+    border-radius: 5px;
+}
+.github img {
+    width: 50%;
+}
+.github h4 {
+    margin-top: .8em;
+}
+  
+@media screen and (min-width: 500px) {
+    .myWorkContainer {
+      padding: 5em;
+    }
+}
+@media screen and (min-width: 600px) {
+    .myWorkContainer {
+      padding: 7em;
+    }
+}
+@media screen and (min-width: 768px) {
+    .myWorkContainer {
+      padding: 3em 0;
+    }
+    .myWorkImgsContainer {
+      flex-direction: row;
+      padding: 5em 1em;   
+      padding-left: 3em;
+        /* to balance out margin-right of each img */
+        /* (2em margin-right + 1em from 'padding: 5em 1em' )  */
+      justify-content: center;      
+    }
+    .myWorkImgsContainer div {
+        width: 30%;
+        margin-bottom: 0;
+        margin-right: 2em;
+            /* match with padding left of myWorkImgsContainer minus 1em */
+    } 
+    .myWorkImgsContainer p {
+        font-size: 1.2rem;
+    }    
+}
+
+
+
+                        /* 'My Education' Section */
+.myEducationContainer {     
+    background-image: linear-gradient(#fbbb67 0%, #b4e295 100%);        
+}                           
