--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     
     text-align: center;
     padding: 2em;
-    min-height: 100vh; 
+    min-height: var(--vh100); 
 }
                             /* Landing Section */
 .landingContainer {       
@@ -29,7 +29,7 @@ body {
     height: auto;
 
     border-radius: 50%;
-    margin-bottom: 5em;
+    margin-bottom: 3em;
 }
 .landingContainer h1 {
     margin: .5em 0;
@@ -116,20 +116,6 @@ h3 {
 .buttonMargin {
     margin-right: 1em;
     margin-left: 1em;
-}
-.github div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: gray;
-    width: 100% !important;
-    border-radius: 5px;
-}
-.github img {
-    width: 50%;
-}
-.github h4 {
-    margin-top: .8em;
 }
   
 @media screen and (min-width: 500px) {
