--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     height: auto;
 
     border-radius: 50%;
-    margin-bottom: 3em;
+    margin-bottom: 2em;
 }
 .landingContainer h1 {
     margin: .5em 0;
@@ -66,6 +66,9 @@ body {
 h3 {
     font-size: 2.5rem;
 }
+h4 {
+    font-size: 1.7rem;
+}
                         
 .myWorkContainer {     
     background-image: linear-gradient(#8BC6EC 0%, #fbbb67 100%);        
@@ -74,7 +77,7 @@ h3 {
 .myWorkImgsContainer {
     display: flex;
     flex-direction: column;
-    padding-top: 5em;
+    margin-top: 5em;
 }
 .myWorkImgsContainer > div {
     width: 100%;
@@ -86,8 +89,7 @@ h3 {
     border-radius: 5px;
 }
 .myWorkImgsContainer h4 {
-    margin-top: .5em;
-    font-size: 1.7rem;
+    margin-top: .5em;    
 }
 .myWorkImgsContainer p {    
     margin-top: 1.5em;    
@@ -106,16 +108,13 @@ h3 {
     color: #449fdb;
     font-size: .8rem;
     font-weight: 700; 
-    letter-spacing: 1px;
     text-decoration: none;
+    margin-right: .25em;
+    margin-left: .25em;
   }
 .linkButton:hover {
     background-color: #449fdb;
     color: white;
-}
-.buttonMargin {
-    margin-right: 1em;
-    margin-left: 1em;
 }
   
 @media screen and (min-width: 500px) {
@@ -133,27 +132,51 @@ h3 {
       padding: 3em 0;
     }
     .myWorkImgsContainer {
-      flex-direction: row;
-      padding: 5em 1em;   
-      padding-left: 3em;
-        /* to balance out margin-right of each img */
-        /* (2em margin-right + 1em from 'padding: 5em 1em' )  */
+      flex-direction: row;    
+      margin-bottom: 5em;
+      padding-left: 2em;
+        /* to balance out margin-right of each img div */        
       justify-content: center;      
     }
     .myWorkImgsContainer div {
         width: 30%;
         margin-bottom: 0;
         margin-right: 2em;
-            /* match with padding left of myWorkImgsContainer minus 1em */
+            /* match with padding left of myWorkImgsContainer */
     } 
     .myWorkImgsContainer p {
         font-size: 1.2rem;
     }    
 }
 
-
-
                         /* 'My Education' Section */
 .myEducationContainer {     
     background-image: linear-gradient(#fbbb67 0%, #b4e295 100%);        
-}                           
+}
+.myEducationContainer > div {
+    margin-top: 5em;
+}             
+.myEducationContainer p {
+    margin-top: 1.5em;
+    background-color: white;
+    color: rgb(58, 58, 58);
+    border-radius: 10px;
+    padding: 1em;
+    line-height: 2;
+    max-width: 65ch;
+}
+.myEducationContainer > div div {
+    margin-bottom: 5em;
+}
+@media screen and (min-width: 768px) {
+    .myEducationContainer > div {
+        display: flex;
+        padding-left: 1em;
+            /* to balance out margin-right of each child div */        
+    }
+    .myEducationContainer > div div {
+        margin-bottom: 0;
+        margin-right: 1em;
+            /* match with padding left of parent div */
+    }
+}
