--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,23 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+p {
+    overflow-wrap: break-word;    
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     
     text-align: center;
-    padding: 2em;
-    min-height: var(--vh100); 
+    padding: 2em;    
 }
                             /* Landing Section */
 .landingContainer {       
     background-image: linear-gradient(#9599E2 0%, #8BC6EC 100%);
-        /* https://cssgradient.io/gradient-backgrounds/ */     
+        /* https://cssgradient.io/gradient-backgrounds/ */  
+    min-height: var(--vh100);           
 }
 .landingContainer img {
     width: 50%;
@@ -179,4 +183,29 @@ h4 {
         margin-right: 1em;
             /* match with padding left of parent div */
     }
+}
+
+                    /* 'My Contact Information' Section */
+.myContactInfoContainer {
+    background-image: linear-gradient(#b4e295 0%, #9599E2 100%);
+    min-height: 100vh;
+}
+.myContactInfoContainer > div {
+    margin-top: 5em;
+    padding: 3em;
+    background-color: lightgray;
+    color: white;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 60ch;
+}
+h5 {
+    font-size: 1.5rem;
+    margin-bottom: .5em;
+}
+.myContactInfoContainer p {
+    font-size: 1.2rem;
+}
+.myContactInfoContainer p:first-of-type {
+    margin-bottom: 1em;
 }
