--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ p {
     align-items: center;
     
     text-align: center;
-    padding: 3em 2em 0;    
+    padding: 3rem 2rem 0;    
 }
 
                             /* Landing Section */
@@ -35,7 +35,7 @@ p {
     background-image: linear-gradient(#9599E2 0%, #8BC6EC 100%);
         /* https://cssgradient.io/gradient-backgrounds/ */  
     min-height: calc(var(--vh, 1vh) * 100);
-    padding: 2em;           
+    padding: 2rem;           
 }
 .landingContainer img {
     width: calc(var(--vh, 1vh) * 26);
@@ -64,10 +64,10 @@ p {
 @media only screen and (min-width: 768px) {
     .landingContainer img {
         width: 30%;
-        max-width: 18em;  
+        max-width: 18rem;  
     }
     .landingContainer h1 {
-        margin: .5em 0;
+        margin: 1.5rem 0;
     }    
 }
 @media only screen and (min-width: 1140px) {    
@@ -89,15 +89,13 @@ h4 {
                         
 .myWorkContainer {     
     background-image: linear-gradient(#8BC6EC 0%, #fbbb67 100%);             
+    padding-bottom: 5rem;
 }                                
 .myWorkContainer > div {
-    display: flex;
-    flex-direction: column;
-    margin-top: 5em;
-}
-.myWorkContainer > div div {
-    width: 100%;
-    margin-bottom: 5em;
+    display: grid;
+    gap: 5rem;
+
+    margin-top: 5rem;
 }
 .myWorkContainer > div img {    
     width: 100%;
@@ -105,18 +103,18 @@ h4 {
     border-radius: 5px;
 }
 .myWorkContainer > div h4 {
-    margin-top: .5em;    
+    margin-top: 1rem;    
 }
 .myWorkContainer > div p {    
-    margin-top: 1.5em;    
+    margin-top: 1.5rem;    
 }
 .techUsed {
     font-weight: 200;    
 }
 .linkButton {
     display: inline-block;
-    margin-top: 2em;
-    padding: 1em 2.5em;
+    margin-top: 2rem;
+    padding: .8rem 2rem;
     border-radius: 100px;
     cursor: pointer;
     transition: all 0.2s; 
@@ -125,8 +123,8 @@ h4 {
     font-size: .8rem;
     font-weight: 700; 
     text-decoration: none;
-    margin-right: .25em;
-    margin-left: .25em;
+    margin-right: .25rem;
+    margin-left: .25rem;
     /* https://stackoverflow.com/questions/45049873/how-to-remove-the-blue-highlight-of-button-on-mobile */
     -webkit-tap-highlight-color: transparent;
   }
@@ -137,30 +135,22 @@ h4 {
   
 @media screen and (min-width: 500px) {
     .myWorkContainer {
-      padding: 3em 5em;
+        padding: 3rem 5rem;
     }
 }
 @media screen and (min-width: 600px) {
     .myWorkContainer {
-      padding: 3em 7em;
+        padding: 3rem 7rem;
     }
 }
 @media screen and (min-width: 768px) {    
     .myWorkContainer {
-      padding: 3em 0;
+        padding: 3rem 2rem;
     }
     .myWorkContainer > div {
-      flex-direction: row;    
-      padding-left: 2em;
-        /* to balance out margin-right of '.myWorkContainer > div div' */        
-      justify-content: center;      
-    }
-    .myWorkContainer > div div {
-        width: 30%;
-        margin-bottom: 0;
-        margin-right: 2em;
-            /* match with padding left of '.myWorkContainer > div' */
-    } 
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+    }                                    
     .myWorkContainer > div p {
         font-size: 1.2rem;
     }    
@@ -169,16 +159,20 @@ h4 {
                         /* 'My Education' Section */
 .myEducationContainer {     
     background-image: linear-gradient(#fbbb67 0%, #b4e295 100%);        
+    padding-bottom: 5rem;
 }
 .myEducationContainer > div {
-    margin-top: 5em;
+    display: grid;
+    gap: 5rem;
+
+    margin-top: 5rem;
 }             
 .myEducationContainer p {
-    margin-top: 1.5em;
+    margin-top: 1.5rem;
     background-color: white;
     color: rgb(58, 58, 58);
     border-radius: 10px;
-    padding: 1em;
+    padding: 1rem;
     line-height: 2;
     max-width: 65ch;
 }
@@ -189,33 +183,27 @@ h4 {
 .myEducationContainer p a:hover {
     color: #1d435d;
 }
-.myEducationContainer > div div {
-    margin-bottom: 5em;
-}
+
 .myEducationContainer i {
     font-weight: 600;
 }
 @media screen and (min-width: 768px) {
     .myEducationContainer > div {
-        display: flex;
-        padding-left: 1em;
-            /* to balance out margin-right of each child div */        
-    }
-    .myEducationContainer > div div {
-        margin-bottom: 0;
-        margin-right: 1em;
-            /* match with padding left of parent div */
-    }
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;               
+
+        padding: 0 1rem;
+    }    
 }
 
                     /* 'My Contact Information' Section */
 .myContactInfoContainer {
     background-image: linear-gradient(#b4e295 0%, #9599E2 100%);
-    padding-bottom: 5em;
+    padding-bottom: 5rem;
 }
 .myContactInfoContainer > div {
-    margin-top: 5em;
-    padding: 3em;
+    margin-top: 5rem;
+    padding: 3rem;
     background-color: rgb(180, 180, 180);
     color: white;
     border-radius: 10px;
@@ -224,11 +212,11 @@ h4 {
 }
 h5 {
     font-size: 1.5rem;
-    margin-bottom: .5em;
+    margin-bottom: .5rem;
 }
 .myContactInfoContainer p {
     font-size: 1.2rem;
 }
 .myContactInfoContainer p:first-of-type {
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 }
