Removed My Education section

--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ h4 {
 
                     /* 'My Contact Information' Section */
 .myContactInfoContainer {
-    background-image: linear-gradient(#b4e295 0%, #9599E2 100%);
+    background-image: linear-gradient(#fbbb67 0%, #9599E2 100%);
     padding-bottom: 5rem;
 }
 .myContactInfoContainer > div {
